; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Mayaqua.c_CheckEndian.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Mayaqua.c_CheckEndian.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_little_endian = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckEndian() #0 {
  %1 = alloca i16, align 2
  %2 = alloca i32*, align 8
  store i16 4660, i16* %1, align 2
  %3 = bitcast i16* %1 to i32*
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 18
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* @g_little_endian, align 4
  br label %10

9:                                                ; preds = %0
  store i32 1, i32* @g_little_endian, align 4
  br label %10

10:                                               ; preds = %9, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
